Endpoint /tree now takes array of relatives (#24)
* Endpoint /tree now take array of relatives

* Added endpoint for detailed information about individual

* updated format of the tests so that they would match endpoint /tree
